assets/css/style.css
/* ... */
/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
  overflow: hidden;
  position: absolute;
  width: 100%;
  top: 140px;
  bottom: 100%;
  opacity: 0;
  transition: ease-in-out 0.4s;
  z-index: 2;
}

section.section-show {
  top: 100px;
  bottom: auto;
  opacity: 1;
  padding-bottom: 45px;
}

section .container {
  background: rgba(0, 0, 0, 0.9);
  padding: 30px;
}

@media (max-width: 768px) {
  section {
    top: 120px;
  }
  section.section-show {
    top: 80px;
  }
}

.section-title h2 {
  font-size: 14px;
  font-weight: 500;
  padding: 0;
  line-height: 1px;
  margin: 0 0 20px 0;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: #aaaaaa;
  font-family: "Poppins", sans-serif;
}

.section-title h2::after {
  content: "";
  width: 120px;
  height: 1px;
  display: inline-block;
  background: #4ceb95;
  margin: 4px 10px;
}

.section-title p {
  margin: 0;
  margin: -15px 0 15px 0;
  font-size: 36px;
  font-weight: 700;
  text-transform: uppercase;
  font-family: "Poppins", sans-serif;
  color: #fff;
}

/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
.about-me .content h3 {
  font-weight: 700;
  font-size: 26px;
  color: #18d26e;
}

.about-me .content ul {
  list-style: none;
  padding: 0;
}

.about-me .content ul li {
  padding-bottom: 10px;
}

.about-me .content ul i {
  font-size: 20px;
  padding-right: 2px;
  color: #18d26e;
}

.about-me .content p:last-child {
  margin-bottom: 0;
}
.about-me .content-format{
 padding-right: 200px;
font-size: normal;
margin-bottom: 50px;
}

/*--------------------------------------------------------------
# Counts
--------------------------------------------------------------*/
.counts {
  padding: 70px 0 60px;
}

.counts .count-box {
  padding: 30px 30px 25px 30px;
  width: 100%;
  position: relative;
  text-align: center;
  background: rgba(255, 255, 255, 0.08);
}

.counts .count-box i {
  position: absolute;
  top: -25px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 24px;
  background: rgba(255, 255, 255, 0.1);
  padding: 12px;
  color: #18d26e;
  border-radius: 50px;
}

.counts .count-box span {
  font-size: 36px;
  display: block;
  font-weight: 600;
  color: #fff;
}

.counts .count-box p {
  padding: 0;
  margin: 0;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
}

/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.skills .progress {
  height: 160px;
  display: block;
  background: none;
}

.skills .progress .skill {
  padding: 10px 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
  color: #fff;
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: rgba(255, 255, 255, 0.15);
}

.skills .progress-bar {
  width: 1px;
  height: 10px;
  transition: .9s;
  background-color: #18d26e;
}
.icon-size{
height: 60px;
width: 60px;
margin:5px 5px  5px 0;  

}
/* .research-topics{
  margin-left: 220px;
  font-weight: bolder;
  color:#15bb62;
  text-decoration:underline;
  display: block;
  
 
}
.research-topics .topics{
  text-align: left;
  margin-left: 0;
  padding-left: 0;
  border-left: 0;
  font-size: large;
  font-weight: 600;
  color: #fff;
  
} */
.container-h1{
  margin-bottom: 50px;
  color: rgb(188, 188, 188);
}
.container-element-properties{
 
  padding: 25px;
  margin: 20px 10px;
  box-sizing: border-box;
 

} 
.first-span{
  background: grey;
}
.second-span{
  background-color: #ed3c0d;
}
.third-span{
  background-color:#15bb62;
}
.fourth-span{
  background-color: rgb(80, 80, 150);
}

.container-element-properties


/*--------------------------------------------------------------
# Interests
--------------------------------------------------------------*/
.interests .icon-box {
  display: flex;
  align-items: center;
  padding: 20px;
  background: rgba(255, 255, 255, 0.08);
  transition: ease-in-out 0.3s;
}

.interests .icon-box i {
  font-size: 32px;
  padding-right: 10px;
  line-height: 1;
}

.interests .icon-box h3 {
  font-weight: 700;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-size: 16px;
  color: #fff;
}

.interests .icon-box:hover {
  background: rgba(255, 255, 255, 0.12);
}
/*
Resume...........................
*/
.my-resume{
  height: 1080px;
  width: 2900px;
}

.first-card{
  height: 400px;
  width:400px;
  display: inline-block;
  margin: 0 25px 25px 50px;
  background:rgba(170, 170, 170, 0.237);
  
}
.first-card:hover{
  background-color: #18d26e;
  transition-duration: .5s;
 
}
.adjust-font-size{
  font-size: medium;
}
.internships{
  margin: 10px 25px 20px 20px ;
}
.content-wrap{
 padding-right: 8%;
 margin-top: 20px;
 font-family: sans-serif;
 font-weight: lighter;
word-spacing: 2.5px;

}
.internships h3{
  font-weight: 800;
 


}

.third-card{

}
.fourth-card{

}
.testing{
  
}
/*--------------------------------------------------------------
# Testimonials
--------------------------------------------------------------*/
.testimonials .testimonial-item {
  box-sizing: content-box;
  min-height: 320px;
}

.testimonials .testimonial-item .testimonial-img {
  width: 90px;
  border-radius: 50%;
  margin: -40px 0 0 40px;
  position: relative;
  z-index: 2;
  border: 6px solid rgba(255, 255, 255, 0.12);
}

.testimonials .testimonial-item h3 {
  font-size: 18px;
  font-weight: bold;
  margin: 10px 0 5px 45px;
  color: #fff;
}

.testimonials .testimonial-item h4 {
  font-size: 14px;
  color: #999;
  margin: 0 0 0 45px;
}

.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
  color: rgba(255, 255, 255, 0.25);
  font-size: 26px;
}
/* ... */

